# kaffeine5

./: CMakeLists.txt  README.md
dtvdaemon/: CMakeLists.txt
icons/: CMakeLists.txt
src/: CMakeLists.txt  abstractmediawidget.h  configuration.cpp  configuration.h  configurationdialog.cpp  datetimeedit.cpp  dbusobjects.cpp  log.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mediawidget.cpp  mediawidget.h  sqlhelper.cpp
src/backend-vlc/: vlcmediawidget.cpp
src/dvb/: dvbchannel.cpp  dvbchannel.h  dvbchanneldialog.cpp  dvbchanneldialog.h  dvbconfigdialog.cpp  dvbconfigdialog.h  dvbdevice_linux.cpp  dvbdevice_linux.h  dvbepg.cpp  dvbepgdialog.cpp  dvbliveview.cpp  dvbmanager.cpp  dvbrecording.cpp  dvbrecordingdialog.cpp  dvbrecordingdialog_p.h  dvbscandialog.cpp  dvbsi.h  dvbtab.cpp  dvbtab.h
src/playlist/: playlistmodel.cpp  playlistmodel.h  playlisttab.cpp
tools/: CMakeLists.txt  updatemimetypes.cpp
