# All icons are copied & hacked from oxygen
# Copyright 2007 The Oxygen Team
# Creative Common Attribution-ShareAlike 3.0 or LGPL2+ (+ clarification)

file(GLOB _icons *.png)
foreach (_current_ICON ${_icons} )
    string(REGEX MATCH "^.*/([a-zA-Z]+)([0-9]+)\\-([a-z]+)\\-(.+\\.png)$" _dummy  "${_current_ICON}")
    set(_type  "${CMAKE_MATCH_1}")
    set(_size  "${CMAKE_MATCH_2}")
    set(_group "${CMAKE_MATCH_3}")
    set(_name  "${CMAKE_MATCH_4}")
    install(FILES ${_current_ICON} DESTINATION share/icons/hicolor/${_size}x${_size}/${_group} RENAME ${_name})
endforeach (_current_ICON)
file(GLOB _icons *.svgz)
foreach (_current_ICON ${_icons} )
    string(REGEX MATCH "^.*/([a-zA-Z]+)sc\\-([a-z]+)\\-(.+\\.svgz)$" _dummy "${_current_ICON}")
    set(_type  "${CMAKE_MATCH_1}")
    set(_group "${CMAKE_MATCH_2}")
    set(_name  "${CMAKE_MATCH_3}")
    install(FILES ${_current_ICON} DESTINATION share/icons/hicolor/scalable/${_group} RENAME ${_name})
endforeach (_current_ICON)
